# mapsnap

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  python-package.yml
docs/: CNAME  index.md
mapsnap/: __init__.py  utils.py
