[wheel]
universal = 1

[metadata]
name = mapsnap
version = attr:mapsnap.__version__
url = https://mapsnap.ygor.dev
download_url = https://github.com/ygbr/mapsnap/releases/latest
project_urls =
    Bug Tracker = https://github.com/ygbr/mapsnap/issues
    Documentation = https://mapsnap.ygor.dev
    Source Code = https://github.com/ygbr/mapsnap
author = Ygor Lemos
author_email = ygbr@mac.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    Topic :: Multimedia
    Topic :: Other/Nonlisted Topic
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Utilities
    Typing :: Typed
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
license = MIT
license_file = LICENSE
description = Apple Maps Web Snapshots on Python
description-file = README.md
long-description = file: README.md, CHANGELOG.md, LICENSE
keywords = apple, mapkit, web, snapshot, maps, map
platforms = any

[options]
zip_safe = True
packages=find:
include_package_data = True
install_requires =
    ecdsa[gmpy2]
    requests
python_requires = >=3.7
tests_requires =
    black
    pytest

[flake8]
max-line-length = 88

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88
known_third_party = ecdsa,requests,setuptools
